<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginStart="-30dp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginEnd="-30dp"
        android:layout_marginBottom="153dp"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textSize="44sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="311dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/fish"
        app:srcCompat="@drawable/fish" />

    <Button
        android:id="@+id/button5"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-30dp"
        android:onClick="openMainMenu"
        android:text="@string/main_menu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="90dp"
        android:layout_above="@+id/imageView2"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@+id/textTitle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/RelativeLayout"
        android:textAlignment="center"
        android:textSize="40sp"  />
</RelativeLayout>